data/all_generated_tests/raw_wast_tests/block_InfiniteLoops_2123.wast
;; 4. **Incorrect `br` Targeting**:    - **Test Description**: Introduce a `br` instruction within a nested loop structure improperly targeting the wrong block, causing the code never to exit the loop.    - **Constraint**: Ensuring `br` instructions correctly target the intended block, especially in deeply nested loops.    - **Relation to Infinite Loops**: Incorrect `br` references can keep re-executing the loop unintentionally.

(assert_invalid
  (module (func $incorrect-br-targeting (result i32)
    (block (result i32)
      (block
        (loop (block (result i32) (br 0 (i32.const 1))))
      )
    )
  ))
  "type mismatch"
)